# MatryoshkaGenerator

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  solve.py
src/matryoshka/: __main__.py  encode.py
src/matryoshka/dolls/: __init__.py  base.py  multi_base.py  qrcode_encode.py  reverse.py  rgb_bytes.py  significant_byte.py  weak_zip.py
